@@ -1,12 +1,7 @@
 {
-  "count": 4,
-  "uniques": 2,
+  "count": 3,
+  "uniques": 1,
   "views": [
-    {
-      "timestamp": "2023-08-23T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2023-09-01T00:00:00Z",
       "count": 3,
